--- a/app/views/index.html
+++ b/app/views/index.html
@@ -136,9 +136,9 @@
 
       <br><br>
 
-      <h2 class="govuk-heading-m">Vacancies order change</h2>
+      <h2 class="govuk-heading-m">Eves suggested vacancies question change</h2>
 
-      <p>Questions <a href="/prototypes/vacancy-change/details">Start</a>
+      <p>Vacancies <a href="/prototypes/vacancy-change/details">Start</a>
       </p>
 
       <br><br>
