--- a/app/views/prototypes/back-vacancies/template.html
+++ b/app/views/prototypes/back-vacancies/template.html
@@ -39,26 +39,26 @@
 
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+      <h1 class="govuk-heading-xl">Download a template</h1>
 
 <div class="govuk-inset-text">
-  Lots of instructions here.
+  Instructions
 </div>
 <br>
 
-<div class="govuk-form-group">
+<!--<div class="govuk-form-group">
   <label class="govuk-label" for="file-upload-1">
     Upload a file
   </label>
   <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>
+</div>-->
 
 </div>
 
 
 
           <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+      Continue
     </a>
        
       </div>
