--- a/app/views/prototypes/back-vacancies/mis.html
+++ b/app/views/prototypes/back-vacancies/mis.html
@@ -46,8 +46,8 @@
     
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-1" name="where-do-you-live" type="radio" value="add-staff">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+        <input class="govuk-radios__input" id="radio-1" name="choose" type="radio" value="#">
+        <label class="govuk-label govuk-radios__label" for="choose">
           Add each members details into an online form
         </label>
       </div><br>
@@ -55,14 +55,14 @@
       <h2 class="govuk-heading-m">Or</h2>
      
 <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+        <input class="govuk-radios__input" id="radio-2" name="choose" type="radio" value="#">
+        <label class="govuk-label govuk-radios__label" for="choose-2">
           Download a template
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+        <label class="govuk-label govuk-radios__label" for="choose-3">
           Upload a file
         </label>
       </div>
@@ -81,7 +81,7 @@
 
 
 
-            <a href="add" class="govuk-button show-continue" style="display: inline;">
+            <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
       Continue
     </a>
        
