--- a/app/views/prototypes/upload/mis.html
+++ b/app/views/prototypes/upload/mis.html
@@ -34,7 +34,7 @@
     
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="raidio-1" name="where-do-you-live" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           Enter your staff information here - on their behalf
         </label>
@@ -42,15 +42,15 @@
 
       <h2 class="govuk-heading-m">Enter your staff email addresses so they can complete their own details</h2>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <input class="govuk-radios__input" id="radio-2" name="where-do-you-live" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
           Enter staff emails here
         </label>
       </div>
 
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="#" name="#" type="radio" value="#">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+        <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
           Upload a file with names and email addresses from your own system
         </label>
       </div>
@@ -68,7 +68,7 @@
 </fieldset><br><br><br>
 
 
-          <a href="upload" class="govuk-button show-continue" style="display: inline;">
+          <a href="#" class="govuk-button show-continue" id ="choice-button" style="display: inline;">
       Continue
     </a>
        
