--- a/app/views/prototypes/back-vacancies/template.html
+++ b/app/views/prototypes/back-vacancies/template.html
@@ -39,21 +39,21 @@
 
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Download a template</h1>
+      <h1 class="govuk-heading-xl">Download the template</h1>
 
 <div class="govuk-inset-text">
   Instructions
 </div>
 <br>
 
-<!--<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload a file
+<div class="govuk-form-group">
+  <label class="govuk-label" for="">
+    Download the FE staff template
   </label>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>-->
-
+ <!--<input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">-->
 </div>
+
+</div><br>
 
 
 
