--- a/app/views/prototypes/back-vacancies/mis.html
+++ b/app/views/prototypes/back-vacancies/mis.html
@@ -57,7 +57,7 @@
 <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-2" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-2">
-          Download a template
+          Download the template
         </label>
       </div>
       <div class="govuk-radios__item">
