--- a/app/views/prototypes/back-vacancies/template.html
+++ b/app/views/prototypes/back-vacancies/template.html
@@ -45,13 +45,11 @@
   Instructions
 </div>
 <br>
+<p><a href="#">Download the FE staff template</a>
+</p>
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="">
-    Download the FE staff template
-  </label>
- <!--<input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">-->
-</div>
+<!--/public/javascripts/[then the name of your file to download]-->
+
 
 </div><br>
 
