--- a/app/views/prototypes/back-vacancies/upload.html
+++ b/app/views/prototypes/back-vacancies/upload.html
@@ -57,7 +57,7 @@
 
 
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
+          <a href="#" class="govuk-button show-continue" style="display: inline;"></a>
       Upload
     </a>
        
