--- a/app/views/prototypes/back-vacancies/template.html
+++ b/app/views/prototypes/back-vacancies/template.html
@@ -39,7 +39,7 @@
 
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Download the template</h1>
+      <h1 class="govuk-heading-xl">Download a template</h1>
 
 <div class="govuk-inset-text">
   Instructions
