--- a/app/views/prototypes/back-vacancies/mis.html
+++ b/app/views/prototypes/back-vacancies/mis.html
@@ -57,13 +57,13 @@
 <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-2" name="choose" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-2">
-          Download the template
+          Download an Excel template and add your staff information
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="choose-3">
-          Upload a file
+          Upload your .xml file
         </label>
       </div>
 
