--- a/app/views/prototypes/back-vacancies/template.html
+++ b/app/views/prototypes/back-vacancies/template.html
@@ -42,7 +42,7 @@
       <h1 class="govuk-heading-xl">Download a template</h1>
 
 <div class="govuk-inset-text">
-  Instructions
+ Add your staff information to the Excel template and upload the file before the deadline date 
 </div>
 <br>
 <p><a href="#">Download the FE staff template</a>
@@ -55,8 +55,8 @@
 
 
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="mis" class="govuk-button show-continue" style="display: inline;">
+      Back
     </a>
        
       </div>
