--- a/app/views/prototypes/back-vacancies/upload.html
+++ b/app/views/prototypes/back-vacancies/upload.html
@@ -42,24 +42,27 @@
       <h1 class="govuk-heading-xl">Upload a file</h1>
 
 <div class="govuk-inset-text">
-  Lots of instructions here.
+  Instructions
 </div>
 <br>
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="file-upload-1">
-    Upload a file
+    Upload your .xml file
   </label>
   <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
 </div>
 
-</div>
+</div><br>
 
 
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;"></a>
+          <a href="#" class="govuk-button show-continue" style="display: inline;">
       Upload
     </a>
+    &nbsp; &nbsp;
+
+   
        
       </div>
     </div>
