--- a/app/views/prototypes/back-vacancies/upload.html
+++ b/app/views/prototypes/back-vacancies/upload.html
@@ -49,7 +49,7 @@
 <div class="govuk-form-group">
   <label class="govuk-label" for="file-upload-1">
     Upload your .xml file
-  </label>
+  </label><br>
   <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
 </div>
 
