--- a/app/views/prototypes/difficult/confirmation-provider.html
+++ b/app/views/prototypes/difficult/confirmation-provider.html
@@ -4,7 +4,6 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
 <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
@@ -17,52 +16,40 @@
 </div>
 
  
-  <a href="#" class="govuk-back-link">Back</a>
+  
+
 {% endblock %}
 
 {% block content %}
 
+          
 
-        <div class="govuk-width-container">
-  
-
-  <h1 class="govuk-heading-m">Impact Training Limited
+<h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
-
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         
-          
-
-
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+            <h1 class="govuk-heading-xl">
+              You’ve successfully submitted your organisation’s information
+</h1>
 
-<!--<div class="govuk-inset-text">
-  Instructions
-</div>
-<br>-->
+            
+<h2 class="govuk-heading-m">
+  What happens next?</h2>
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload your .xml file
-  </label><br>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>
+  <h2 class="govuk-heading-m">You need to:</h2>
 
-</div><br>
-
-
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+  <h3 class="govuk-heading-m govuk-!-margin-bottom-1">
+    <a href="mis" class="govuk-link govuk-link--no-visited-state">
+      Tell us about your staff members
     </a>
-    &nbsp; &nbsp;
+  </h3>
 
-   
+  
        
       </div>
     </div>
