--- a/app/views/prototypes/difficult/percentage.html
+++ b/app/views/prototypes/difficult/percentage.html
@@ -4,8 +4,7 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
-<div class="govuk-phase-banner">
+  <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
       prototype
@@ -18,6 +17,7 @@
 
  
   <a href="#" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
@@ -29,40 +29,32 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         
-          
-
-
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+            <h1 class="govuk-heading-xl">
+  What was your staff spend as a percentage of your total income?
+</h1>
 
-<!--<div class="govuk-inset-text">
-  Instructions
-</div>
-<br>-->
+            
+
 
 <div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload your .xml file
-  </label><br>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
+  <label class="govuk-label" for="width-10">
+    Enter this as a percentage of your total income
+  </label>
+  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
 </div>
 
-</div><br>
+</fieldset><br><br>
 
 
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
-    &nbsp; &nbsp;
-
-   
        
       </div>
     </div>
