--- a/app/views/prototypes/difficult/salary.html
+++ b/app/views/prototypes/difficult/salary.html
@@ -4,8 +4,7 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
-<div class="govuk-phase-banner">
+  <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
       prototype
@@ -18,51 +17,48 @@
 
  
   <a href="#" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  
 
-  <h1 class="govuk-heading-m">Impact Training Limited
-  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
+<div class="govuk-width-container">
+ 
+
+  <span class="govuk-caption-xl">John Adams </span>
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        
-          
-
-
+        <form action="/form-handler" method="post" novalidate>
           <div class="govuk-form-group">
+            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="postcode">
+                What is their gross annual salary?
+              </label><br>
+              <span id="sort-code-hint" class="govuk-hint">
+    For example, £26,386
+  </span>
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+            </h1>
+            <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" (£)>
+          </div>
 
-<!--<div class="govuk-inset-text">
-  Instructions
-</div>
-<br>-->
-
-<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload your .xml file
-  </label><br>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>
-
-</div><br>
-
-
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+          <a href="contracted-hours" class="govuk-button show-continue" style="display: inline;">
+      Continue
     </a>
-    &nbsp; &nbsp;
+        </form>
+      </div>
+    </div>
+  </main>
+</div>
 
-   
+
+
+
+          
        
       </div>
     </div>
