--- a/app/views/prototypes/difficult/template.html
+++ b/app/views/prototypes/difficult/template.html
@@ -39,30 +39,25 @@
 
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+      <h1 class="govuk-heading-xl">Download a template</h1>
 
-<!--<div class="govuk-inset-text">
-  Instructions
+<div class="govuk-inset-text">
+ Add your staff information to the Excel template and upload the file before the deadline date 
 </div>
-<br>-->
+<br>
+<p><a href="#">Download the FE staff template</a>
+</p>
 
-<div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload your .xml file
-  </label><br>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-</div>
+<!--/public/javascripts/[then the name of your file to download]-->
+
 
 </div><br>
 
 
 
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+          <a href="mis" class="govuk-button show-continue" style="display: inline;">
+      Back
     </a>
-    &nbsp; &nbsp;
-
-   
        
       </div>
     </div>
