--- a/app/views/index.html
+++ b/app/views/index.html
@@ -144,6 +144,14 @@
       <br><br>
 
 
+      <h2 class="govuk-heading-m">Adding admin staff and fixing the difficult questions</h2>
+
+      <p>Difficult questions - <a href="/prototypes/difficult/details">Start</a>
+      </p>
+
+      <br><br>
+
+
       <h2 class="govuk-heading-m">Examples and documentation</h2>
 
       <ul class="govuk-list govuk-list--bullet">
