--- a/app/views/prototypes/difficult/staff-revisit.html
+++ b/app/views/prototypes/difficult/staff-revisit.html
@@ -4,8 +4,7 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
-<div class="govuk-phase-banner">
+  <div class="govuk-phase-banner">
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag">
       prototype
@@ -18,51 +17,53 @@
 
  
   <a href="#" class="govuk-back-link">Back</a>
+
 {% endblock %}
 
 {% block content %}
 
 
         <div class="govuk-width-container">
-  
+ 
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
-
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         
-          
-
-
           <div class="govuk-form-group">
 
-      <h1 class="govuk-heading-xl">Upload a file</h1>
+            <h1 class="govuk-heading-xl">
+  How much of your income was spent on staff salaries?
+</h1>
 
-<!--<div class="govuk-inset-text">
-  Instructions
+            
+<div class="govuk-inset-text">
+  Enter the total amount for teaching and non-teaching staff for 2020/21.
 </div>
-<br>-->
 
 <div class="govuk-form-group">
-  <label class="govuk-label" for="file-upload-1">
-    Upload your .xml file
-  </label><br>
-  <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
+  <label class="govuk-label" for="width-10">
+    Total spend on staff salaries in £'s
+  </label>
+  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
 </div>
 
-</div><br>
+<div class="govuk-form-group">
+  <label class="govuk-label" for="width-10">
+    Your staff spend as a percentage of your total income %
+  </label>
+  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+</div>
+
+</fieldset><br><br>
 
 
-
-          <a href="#" class="govuk-button show-continue" style="display: inline;">
-      Upload
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
-    &nbsp; &nbsp;
-
-   
        
       </div>
     </div>
