add admin in many vacancies

--- a/app/views/prototypes/difficult/filled.html
+++ b/app/views/prototypes/difficult/filled.html
@@ -131,7 +131,7 @@
       </div>
 
 </fieldset>
-</div>
+</div><br>
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
@@ -181,6 +181,48 @@
 
 </fieldset>
 </div><br>
+
+<h2 class="govuk-heading-m">Administration</h2>
+<div class="govuk-radios">
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="supp" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp">
+              Very easy
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="supp-2" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-2">
+              Easy
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="supp-3" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-3">
+              Neither easy or difficult
+            </label>
+          </div>
+          <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="supp-4" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-4">
+              Difficult
+            </label>
+    
+            
+        </div>
+    
+        <div class="govuk-radios__item">
+            <input class="govuk-radios__input" id="supp-5" name="supp" type="radio" value="">
+            <label class="govuk-label govuk-radios__label" for="supp-5">
+              Very difficult
+            </label>
+          </div>
+      
+        </div>
+      </div>
+
+</fieldset>
+</div><div></div><br><br>
 
 
           <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
