--- a/app/views/prototypes/difficult/many-vacancies.html
+++ b/app/views/prototypes/difficult/many-vacancies.html
@@ -58,6 +58,13 @@
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
+
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="width-10">
+        <h2 class="govuk-heading-m">Administration</h2>HR, data...
+      </label>
+      <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+    </div>
       
    
 </fieldset>
