--- a/app/views/prototypes/difficult/many-vacancies-filled.html
+++ b/app/views/prototypes/difficult/many-vacancies-filled.html
@@ -58,8 +58,15 @@
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
       <br>
+
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="width-10">
+          <h2 class="govuk-heading-m">Administration</h2>
+        </label>
+        <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
+      </div>
 </fieldset>
-</div>
+</div><BR>
 
 
 
