--- a/app/views/prototypes/difficult/filled.html
+++ b/app/views/prototypes/difficult/filled.html
@@ -35,194 +35,33 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How easy or difficult was it to fill these vacancies?
+        Were some subjects difficult to find teachers for?
       </h1>
     </legend><br>
 
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        
-        <h2 class="govuk-heading-m">Managers</h2>
-        <div class="govuk-radios">
+
+        <div class="govuk-radios govuk-radios--inline">
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="man" name="man" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="man">
-              Very easy
+            <input class="govuk-radios__input" id="changed-name" name="changed-name" type="radio" value="yes">
+            <label class="govuk-label govuk-radios__label" for="changed-name">
+              Yes
             </label>
           </div>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="man-2" name="man" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="man-2">
-              Easy
+            <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
+            <label class="govuk-label govuk-radios__label" for="changed-name-2">
+              No
             </label>
           </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="man-3" name="man" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="man-3">
-              Neither easy or difficult
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="man-4" name="man" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="man-4">
-              Difficult
-            </label>
-    
-            
         </div>
     
-        <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="man-5" name="man" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="man-5">
-              Very difficult
-            </label>
-          </div><br>
-      
-        </div>
-      </div>
+      </fieldset>
+    </div>
 
-</fieldset>
-</div>
 
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    
 
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        
-        <h2 class="govuk-heading-m">Teachers</h2>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="teach" name="teach" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="teach">
-              Very easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="teach-2" name="teach" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="teach-2">
-              Easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="teach-3" name="teach" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="teach-3">
-              Neither easy or difficult
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="teach-4" name="teach" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="teach-4">
-              Difficult
-            </label>
-    
-            
-        </div>
-    
-        <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="teach-5" name="teach" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="teach-5">
-              Very difficult
-            </label>
-          </div>
-      
-        </div>
-      </div>
 
-</fieldset>
-</div><br>
-
-<div class="govuk-form-group">
-  <fieldset class="govuk-fieldset">
-    
-
-    <div class="govuk-form-group">
-      <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
-        
-        <h2 class="govuk-heading-m">Teaching support</h2>
-        <div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp">
-              Very easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-2" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-2">
-              Easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-3" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-3">
-              Neither easy or difficult
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-4" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-4">
-              Difficult
-            </label>
-    
-            
-        </div>
-    
-        <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-5" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-5">
-              Very difficult
-            </label>
-          </div>
-      
-        </div>
-      </div>
-
-</fieldset>
-</div><br>
-
-<h2 class="govuk-heading-m">Administration</h2>
-<div class="govuk-radios">
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp">
-              Very easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-2" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-2">
-              Easy
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-3" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-3">
-              Neither easy or difficult
-            </label>
-          </div>
-          <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-4" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-4">
-              Difficult
-            </label>
-    
-            
-        </div>
-    
-        <div class="govuk-radios__item">
-            <input class="govuk-radios__input" id="supp-5" name="supp" type="radio" value="">
-            <label class="govuk-label govuk-radios__label" for="supp-5">
-              Very difficult
-            </label>
-          </div>
-      
-        </div>
-      </div>
-
-</fieldset>
-</div><div></div><br><br>
+<br><br>
 
 
           <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
