--- a/app/views/prototypes/difficult/many-vacancies.html
+++ b/app/views/prototypes/difficult/many-vacancies.html
@@ -76,7 +76,7 @@
 
 
 
-          <a href="many-vacancies-filled" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
