--- a/app/views/prototypes/difficult/how-long.html
+++ b/app/views/prototypes/difficult/how-long.html
@@ -35,59 +35,10 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How long on average did it take to fill the vacancies?
+                How long does it take to recruit a teacher?
               </h1>
             </legend><br>
-        
-           
-            <h2 class="govuk-heading-m">Managers</h2>
-            
-        
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                  
-                </legend>
-                <div class="govuk-radios">
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                      Less than one month
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                      2 to 3 months
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-                      4 to 5 months
-                    </label>
-                  </div>
-                  <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-                    <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-                      Over 6 months
-                    </label>
-                  </div>
-                </div>
-            
-              </fieldset>
-            </div>
-               <br>
-        
-               <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset">
-                  <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-                    
-                  </legend><br>
-              
-                 
-                  <h2 class="govuk-heading-m">Teachers</h2>
-                  
+      
               
                   <div class="govuk-form-group">
                     <fieldset class="govuk-fieldset">
@@ -123,84 +74,7 @@
                   
                     </fieldset>
                   </div>
-                     <br><br>
-        
-                     <h2 class="govuk-heading-m">Teaching support</h2>
-                  
-              
-                  <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset">
-                      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                        
-                      </legend>
-                      <div class="govuk-radios">
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="support" name="support" type="radio" value="short">
-                          <label class="govuk-label govuk-radios__label" for="support">
-                            Less than one month
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="support-2" name="support" type="radio" value="two">
-                          <label class="govuk-label govuk-radios__label" for="support-2">
-                            2 to 3 months
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="support-3" name="support" type="radio" value="five">
-                          <label class="govuk-label govuk-radios__label" for="support-3">
-                            4 to 5 months
-                          </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                          <input class="govuk-radios__input" id="support-4" name="support" type="radio" value="six">
-                          <label class="govuk-label govuk-radios__label" for="support-4">
-                            Over 6 months
-                          </label>
-                        </div>
-                      </div>
-                  
-                    </fieldset>
-                  </div>
-                     <br><br>
-
-                     <h2 class="govuk-heading-m">Administration</h2>
-
-                     <div class="govuk-form-group">
-                      <fieldset class="govuk-fieldset">
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-                          
-                        </legend>
-                        <div class="govuk-radios">
-                          <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="teachers" name="teachers" type="radio" value="less">
-                            <label class="govuk-label govuk-radios__label" for="teachers">
-                              Less than one month
-                            </label>
-                          </div>
-                          <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="teachers-2" name="teachers" type="radio" value="months">
-                            <label class="govuk-label govuk-radios__label" for="teachers-2">
-                              2 to 3 months
-                            </label>
-                          </div>
-                          <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="teachers-3" name="teachers" type="radio" value="four">
-                            <label class="govuk-label govuk-radios__label" for="teachers-3">
-                              4 to 5 months
-                            </label>
-                          </div>
-                          <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="teachers-4" name="teachers" type="radio" value="over">
-                            <label class="govuk-label govuk-radios__label" for="teachers-4">
-                              Over 6 months
-                            </label>
-                          </div>
-                        </div>
-                    
-                      </fieldset>
-                    </div><div></div><br><br>
-                  
+                     <br><BR>
         
         
         
