--- a/app/views/prototypes/difficult/how-long.html
+++ b/app/views/prototypes/difficult/how-long.html
@@ -35,7 +35,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How long does it take to recruit a teacher?
+                How long did it take to recruit a teacher?
               </h1>
             </legend><br>
       
