--- a/app/views/prototypes/difficult/how-long.html
+++ b/app/views/prototypes/difficult/how-long.html
@@ -35,9 +35,9 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
               <h1 class="govuk-fieldset__heading">
-                How long did it take to recruit a teacher?
+                How long does it normally take to recruit a teacher?
               </h1>
-            </legend><br>
+            </legend>
       
               
                   <div class="govuk-form-group">
@@ -74,7 +74,7 @@
                   
                     </fieldset>
                   </div>
-                     <br><BR>
+                     <br><br>
         
         
         
