--- a/app/views/prototypes/difficult/many-vacancies.html
+++ b/app/views/prototypes/difficult/many-vacancies.html
@@ -61,7 +61,7 @@
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
-        <h2 class="govuk-heading-m">Administration</h2>HR, data...
+        <h2 class="govuk-heading-m">Administration</h2>Those who support the delivery of training but are not in the groups above. Foe example, HR or data officer.
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
     </div>
