--- a/app/views/prototypes/difficult/filled.html
+++ b/app/views/prototypes/difficult/filled.html
@@ -56,12 +56,7 @@
         </div>
     
       </fieldset>
-    </div>
-
-
-
-
-<br><br>
+    </div><br>
 
 
           <a href="vacancies-subject" class="govuk-button show-continue" style="display: inline;">
