--- a/app/views/prototypes/difficult/vacancies-subject.html
+++ b/app/views/prototypes/difficult/vacancies-subject.html
@@ -438,7 +438,7 @@
 
 
 
-          <a href="explain" class="govuk-button show-continue" style="display: inline;">
+          <a href="explain-how-long" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
