--- a/app/views/prototypes/difficult/many-vacancies.html
+++ b/app/views/prototypes/difficult/many-vacancies.html
@@ -57,7 +57,7 @@
         <h2 class="govuk-heading-m">Teaching support</h2>Teaching assistant, mentor, assessor
       </label>
       <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-    </div>
+    </div><br>
 
     <div class="govuk-form-group">
       <label class="govuk-label" for="width-10">
