--- a/app/views/prototypes/difficult/role.html
+++ b/app/views/prototypes/difficult/role.html
@@ -36,55 +36,50 @@
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Which best describes John's role?
+        What is John's role?
       </h1>
     </legend><br>
     
-    <div class="govuk-radios">
+    
+        <div id="waste-hint" class="govuk-hint">
+          Select all that apply.
+        </div>
+        <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
+            <label class="govuk-label govuk-checkboxes__label" for="waste">
+              Manager
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-2">
+              Teacher
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+              Teaching support
+            </label>
+          </div>
+
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-2">
+              Administration
+            </label>
+          </div>
+        </div>
+    
       
-
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Manager
-        </label>
-        
-
-        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          For example: senior or middle manager, principal, vice-principal, CEO
-        </span>
-      </div><br>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
-        </label>
-        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Anyone who teaches or trains as the main part of their job
-        </span>
-      </div><br>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Teaching support
-        </label>
-
-        <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          For example: teaching assistant, mentor, assessor
-        </span>
-      </div>
-
-    </div>
   </fieldset>
 </div>
 
 <br>
 
 
-          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
+          <a href="role-main" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
