--- a/app/views/index.html
+++ b/app/views/index.html
@@ -149,6 +149,10 @@
       <p>Difficult questions - <a href="/prototypes/difficult/details">Start</a>
       </p>
 
+    
+      <p>Adding a manager flow - <a href="/prototypes/manager/details">Start</a>
+      </p>
+
       <br><br>
 
 
