--- a/app/views/prototypes/manager/role-main-rekha.html
+++ b/app/views/prototypes/manager/role-main-rekha.html
@@ -83,7 +83,7 @@
 <br>
 
 
-          <a href="qualification-type" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-rekha-four" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
