rekha contract pages

--- a/app/views/prototypes/manager/contract.html
+++ b/app/views/prototypes/manager/contract.html
@@ -24,7 +24,7 @@
 
 
         
- <span class="govuk-caption-xl">John Adams </span>   
+ <span class="govuk-caption-xl">Rekha Patel </span>   
 
   
     <main class="govuk-main-wrapper " id="main-content" role="main">
