--- a/app/views/prototypes/manager/retire.html
+++ b/app/views/prototypes/manager/retire.html
@@ -24,7 +24,7 @@
 
 
 
-   <span class="govuk-caption-xl">John Adams </span>
+   <span class="govuk-caption-xl">Rekha Patel </span>
 
 <br>
   
@@ -71,7 +71,7 @@
 <br>
 
 
-          <a href="complete-john-five" class="govuk-button show-continue" style="display: inline;">
+          <a href="complete-rekha-five" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
