--- a/app/views/prototypes/manager/list-staff-john-end.html
+++ b/app/views/prototypes/manager/list-staff-john-end.html
@@ -96,7 +96,7 @@
 
   <tr class="govuk-table__row">
     
-    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Andrew McPherson</a></td>
+    <td class="govuk-table__cell" scope="row"> <a class="browse-list-item-link" a href="#">Rekha Patel</a></td>
     <td class="govuk-table__cell" scope="row"> </td>
    <td class="govuk-table__cell"><strong class="govuk-tag app-task-list__task-completed" id="eligibility-completed">Completed</strong></td>
   </tr>
