--- a/app/views/index.html
+++ b/app/views/index.html
@@ -156,6 +156,9 @@
       <p>Adding a manager flow - <a href="/prototypes/manager/details">Start</a>
       </p>
 
+      <p>Peter's ideas on subjects - <a href="/prototypes/peter/details">Start</a>
+      </p>
+
       <br><br>
 
 
